--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-50 text-gray-800"> <!-- ヘッダー -->
+<body class="bg-gray-50 text-gray-800">
+  <!-- ヘッダー -->
   <header class="p-4 bg-blue-500 text-white font-bold">
     <div class="max-w-5xl mx-auto flex items-center justify-between">
       <!-- ロゴ -->
@@ -116,9 +117,13 @@
       <p>現在準備中…</p>
     </section> <!-- Contact / 問い合わせ -->
     <section id="contact" class="space-y-4">
-      <h2 class="text-3xl font-bold mb-4">お問い合わせ</h2> <!-- Google Forms埋め込み例 --> <iframe
-        src="https://docs.google.com/forms/d/e/xxxxxxxxxxxx/viewform?embedded=true" width="100%" height="600"
-        frameborder="0" marginheight="0" marginwidth="0"> 読み込んでいます… </iframe>
+      <h2 class="text-3xl font-bold mb-4">お問い合わせ</h2> <!-- Google Forms埋め込み例 -->
+      <p class="text-sm text-gray-600">
+        ※ご相談内容が整理できていなくても大丈夫です。
+        初回相談は無料ですので、お気軽にご連絡ください。
+      </p> <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeIxFcREARZjxxuuzXHXGkjcSOez78-2X85Q-0oM_WGC2k-BQ/viewform?embedded=true"
+        width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> 読み込んでいます… </iframe>
     </section> <!-- ブログリンク -->
     <section class="text-center"> <a href="#" class="text-blue-600 underline">ブログはこちら</a> </section>
   </main> <!-- フッター -->
