--- a/index.html
+++ b/index.html
@@ -44,35 +44,45 @@
     </script>
   </header>
   <!-- メインコンテンツ -->
-  <main class="p-8 space-y-16"> <!-- ファーストビュー -->
-    <section id="hero" class="relative h-96"> <img src="res/top.png" alt="プログラミングラボ"
-        class="absolute w-full h-full object-cover"> <!-- 文字中央 -->
-      <div class="absolute inset-0 z-10 flex flex-col items-center justify-center h-full text-white bg-black/30">
-        <div
-          class="absolute inset-0 z-10 flex flex-col items-center justify-center h-full text-white bg-black/30 text-center px-4">
-          <h1 class="text-4xl font-bold">TomoshibeeeLab</h1>
+  <main class="p-0 space-y-16"> <!-- ファーストビュー -->
+    <section id="hero" class="relative h-72 md:h-96 lg:h-[500px]">
+      <img src="res/top.png" class="absolute inset-0 w-full h-full object-cover">
+      <!-- 黒フィルター -->
+      <div class="absolute inset-0 bg-black/60"></div>
 
-          <p class="text-lg mt-2">
-            中小企業・個人開発者向けの技術改善ラボ
-          </p>
+      <!-- オーバーレイ＋中央テキスト -->
+      <div class="absolute inset-0 z-10 flex flex-col items-center justify-center
+           text-white bg-black/10 text-center px-4">
+        <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold">
+          TomoshibeeeLab
+        </h1>
 
-          <p class="text-base mt-1 opacity-90">
-            “処理の高速化”を目指すプログラミングラボ
-          </p>
-        </div>
-      </div> <!-- 右下ボタン -->
-      <div class="absolute bottom-4 right-4 z-20"> <a href="#contact"
+        <p class="text-lg mt-2">
+          中小企業・個人開発者向けの技術改善ラボ
+        </p>
+
+        <p class="text-base mt-1 opacity-90">
+          “処理の高速化”を目指すプログラミングラボ
+        </p>
+      </div>
+
+      <!-- 右下ボタン -->
+      <div class="absolute bottom-8 right-8 z-20"> <a href="#contact"
           class="bg-red-500 text-white px-6 py-3 rounded hover:bg-red-600"> お問い合わせ </a> </div>
-    </section> <!-- 業務内容 -->
+    </section>
+    <!-- 業務内容 -->
     <section id="work">
-      <h2 class="text-3xl font-bold mb-4">業務内容</h2>
-      <ol class="list-decimal list-inside space-y-2">
-        <li>プログラムの速度改善</li>
-        <li>業務分析＆改善</li>
-        <li>古いコードの解析</li>
-      </ol>
+      <div class="max-w-5xl mx-auto px-4">
+        <h2 class="text-3xl font-bold mb-4">業務内容</h2>
+        <ol class="list-decimal list-inside space-y-2">
+          <li>プログラムの速度改善</li>
+          <li>業務分析＆改善</li>
+          <li>古いコードの解析</li>
+        </ol>
+      </div>
     </section> <!-- Case / 事例 -->
     <section id="case" class="space-y-8">
+      <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">事例 / 成果紹介</h2> <!-- 事例1 -->
       <div class="bg-white p-4 rounded shadow">
         <h3 class="text-xl font-semibold mb-2">ECサイトの処理速度改善</h3>
@@ -89,8 +99,10 @@
         <p>Excel自動化とコード解析により、月次作業の工数を 40% 削減。</p>
         <p class="text-gray-500 mt-1">期間: 1ヶ月 | 担当: 有馬祥子</p>
       </div>
+      </div>
     </section> <!-- Member / メンバー紹介 -->
     <section id="member">
+      <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">Member / メンバー紹介</h2>
       <div class="space-y-4">
         <div class="flex items-center space-x-4"> <img src="https://via.placeholder.com/80" alt="メンバー写真"
@@ -102,8 +114,10 @@
         </div>
         <p class="text-center">📍静岡</p>
       </div>
+      </div>
     </section> <!-- Pricing / 単価 -->
     <section id="pricing">
+      <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">料金 / 単価</h2>
       <ul class="list-disc list-inside space-y-2">
         <li>初回相談（1時間）: 無料</li>
@@ -111,20 +125,24 @@
         <li>処理高速化サービス: ¥30,000〜（※成果保証付き）</li>
       </ul>
       <p class="mt-2 text-gray-600 text-sm"> ※成果が出なかった場合は、請求いたしません。安心してご依頼ください。 </p>
+      </div>
     </section> <!-- FAQ / よくある質問 -->
     <section id="faq">
+      <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">よくある質問</h2>
       <p>現在準備中…</p>
+      </div>
     </section> <!-- Contact / 問い合わせ -->
     <section id="contact" class="space-y-4">
+      <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">お問い合わせ</h2> <!-- Google Forms埋め込み例 -->
-      <p class="text-sm text-gray-600">
-        ※ご相談内容が整理できていなくても大丈夫です。
-        初回相談は無料ですので、お気軽にご連絡ください。
+      <p class="text-sm text-gray-600">※ご相談内容が整理できていなくても大丈夫です。</p>
+      <p class="text-sm text-gray-600">初回相談は無料ですので、お気軽にご連絡ください。
       </p> <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSeIxFcREARZjxxuuzXHXGkjcSOez78-2X85Q-0oM_WGC2k-BQ/viewform?embedded=true"
         width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"> 読み込んでいます… </iframe>
-    </section> <!-- ブログリンク -->
+      </div>
+      </section> <!-- ブログリンク -->
     <section class="text-center"> <a href="#" class="text-blue-600 underline">ブログはこちら</a> </section>
   </main> <!-- フッター -->
   <footer class="p-4 text-center text-gray-500"> © 2026 TomoshibeeeLab Inc. </footer>
