--- a/index.html
+++ b/index.html
@@ -100,22 +100,40 @@
         <p class="text-gray-500 mt-1">期間: 1ヶ月 | 担当: 有馬祥子</p>
       </div>
       </div>
-    </section> <!-- Member / メンバー紹介 -->
-    <section id="member">
+    </section> 
+    <section id="member" class="py-16">
       <div class="max-w-5xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-4">Member / メンバー紹介</h2>
-      <div class="space-y-4">
-        <div class="flex items-center space-x-4"> <img src="https://via.placeholder.com/80" alt="メンバー写真"
-            class="rounded-full">
-          <div>
-            <p class="font-semibold">山田 太郎</p>
-            <p>AIエンジニア / 「コード改善が得意です」</p>
+        <h2 class="text-3xl font-bold mb-8">Member / メンバー紹介</h2>
+
+        <div class="flex items-start space-x-6">
+          <!-- プロフィール写真 -->
+          <img
+            src="res/profile-arima.png"
+            alt="有馬祥子 プロフィール写真"
+            class="w-24 h-24 rounded-full object-cover border-2 border-gray-200"
+          >
+
+          <!-- プロフィール文 -->
+          <div class="space-y-2">
+            <p class="text-xl font-semibold">有馬 祥子</p>
+            <p class="text-sm text-gray-600">
+              ソフトウェア・エンジニア / 技術改善・処理高速化
+            </p>
+
+            <p class="mt-3 text-gray-700 leading-relaxed">
+              処理が遅くて困っている現場を、何度も見てきました。<br>
+              「原因がわからない」「誰に聞けばいいかわからない」<br>
+              ――そんな状態から、一緒に整理して改善していくのが得意です。
+            </p>
+
+            <p class="text-sm text-gray-500">
+              📍 静岡 / リモート対応可
+            </p>
           </div>
         </div>
-        <p class="text-center">📍静岡</p>
       </div>
-      </div>
-    </section> <!-- Pricing / 単価 -->
+    </section> 
+    <!-- Pricing / 単価 -->
     <section id="pricing">
       <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">料金 / 単価</h2>
@@ -136,7 +154,7 @@
     <section id="contact" class="space-y-4">
       <div class="max-w-5xl mx-auto px-4">
       <h2 class="text-3xl font-bold mb-4">お問い合わせ</h2> <!-- Google Forms埋め込み例 -->
-      <p class="text-sm text-gray-600">※ご相談内容が整理できていなくても大丈夫です。</p>
+      <p class="text-sm text-gray-600">ご相談内容が整理できていなくても大丈夫です。</p>
       <p class="text-sm text-gray-600">初回相談は無料ですので、お気軽にご連絡ください。
       </p> <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSeIxFcREARZjxxuuzXHXGkjcSOez78-2X85Q-0oM_WGC2k-BQ/viewform?embedded=true"
