--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="bg-gray-50 text-gray-800">
   <!-- ヘッダー -->
-  <header class="p-4 bg-blue-500 text-white font-bold">
+  <header class="sticky top-0 z-50 p-4 bg-blue-500 text-white font-bold">
     <div class="max-w-5xl mx-auto flex items-center justify-between">
       <!-- ロゴ -->
       <div>🕯️ ともしびラボ</div>
