--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/res/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/res/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/res/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/res/favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="/res/favicon/site.webmanifest" />
   <style>
     .ballet-400 {
       font-family: "Ballet", cursive;
