--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>トモシビーラボ</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap" rel="stylesheet">
@@ -14,14 +15,6 @@
   <link rel="shortcut icon" href="/res/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/res/favicon/apple-touch-icon.png" />
   <link rel="manifest" href="/res/favicon/site.webmanifest" />
-  <style>
-    .ballet-400 {
-      font-family: "Ballet", cursive;
-      font-optical-sizing: auto;
-      font-weight: 400;
-      font-style: normal;
-    }
-  </style>
 </head>
 
 <body class="bg-gray-50 text-gray-800">
