--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
               「原因がわからない」「誰に聞けばいいかわからない」<br>
               ――そんな状態から、一緒に整理して改善していくのが得意です。
             </p>
-
-            <p class="text-sm text-gray-500">
-              📍 静岡 / リモート対応可
-            </p>
           </div>
+        </div>
+        <div>
+          <p class="text-sm text-gray-500 text-center mt-4">
+            📍 静岡 / リモート対応可
+          </p>
         </div>
       </div>
     </section>
