--- a/index.html
+++ b/index.html
@@ -164,9 +164,12 @@
     <section id="contact" class="space-y-4">
       <div class="max-w-5xl mx-auto px-4">
         <h2 class="text-3xl font-bold mb-4">お問い合わせ</h2> <!-- Google Forms埋め込み例 -->
-        <p class="text-sm text-gray-600">ご相談内容が整理できていなくても大丈夫です。</p>
-        <p class="text-sm text-gray-600">初回相談は無料ですので、お気軽にご連絡ください。
-        </p> <iframe class="w-full h-[400px]"
+        <div class="text-center p-8">
+          <p class="text-sm text-gray-600">ご相談内容が整理できていなくても大丈夫です。</p>
+          <p class="text-sm text-gray-600">初回相談は無料ですので、お気軽にご連絡ください。
+          </p>
+        </div>
+        <iframe class="w-full h-[400px]"
           src="https://docs.google.com/forms/d/e/1FAIpQLSeIxFcREARZjxxuuzXHXGkjcSOez78-2X85Q-0oM_WGC2k-BQ/viewform?embedded=true"></iframe>
       </div>
     </section> <!-- ブログリンク -->
