--- a/index.html
+++ b/index.html
@@ -85,27 +85,46 @@
     <!-- 業務内容 -->
     <section id="work">
       <div class="max-w-5xl mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-4">業務内容</h2>
-        <ol class="list-decimal list-inside space-y-2">
-          <li>プログラムの速度改善</li>
-          <li>業務分析＆改善</li>
-          <li>古いコードの解析</li>
-        </ol>
+        <h2 class="hidden md:hidden text-3xl font-bold mb-8 text-center">業務内容</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="rounded-xl overflow-hidden shadow">
+            <img src="res/work-speedup.png" class="w-full h-48 object-cover">
+            <p class="p-4 font-semibold">処理速度改善</p>
+            <div>事例1</div>
+          </div>
+
+          <div class="rounded-xl overflow-hidden shadow">
+            <img src="res/work-legacy.png" class="w-full h-48 object-cover">
+            <p class="p-4 font-semibold">古いアプリの解析</p>
+            <div>事例2</div>
+          </div>
+
+          <div class="rounded-xl overflow-hidden shadow">
+            <img src="res/work-consulting.png" class="w-full h-48 object-cover">
+            <p class="p-4 font-semibold">業務のIT化の相談</p>
+            <div>事例3</div>
+          </div>
+        </div>
+
       </div>
     </section> <!-- Case / 事例 -->
     <section id="case" class="space-y-8">
       <div class="max-w-5xl mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-4">事例 / 成果紹介</h2> <!-- 事例1 -->
+        <h2 class="text-3xl font-bold mb-4">事例 / 成果紹介</h2>
+        <!-- 事例1 -->
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-xl font-semibold mb-2">ECサイトの処理速度改善</h3>
           <p>古いコードで遅くなっていた商品検索処理を最適化。ページ表示速度が平均 3秒 → 1秒に改善。</p>
           <p class="text-gray-500 mt-1">期間: 2週間 | 担当: 有馬祥子</p>
-        </div> <!-- 事例2 -->
+        </div>
+        <!-- 事例2 -->
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-xl font-semibold mb-2">レガシー業務アプリの分析＆改善</h3>
           <p>Excel自動化とコード解析により、月次作業の工数を 40% 削減。</p>
           <p class="text-gray-500 mt-1">期間: 1ヶ月 | 担当: 有馬祥子</p>
-        </div> <!-- 事例3 -->
+        </div>
+        <!-- 事例3 -->
         <div class="bg-white p-4 rounded shadow">
           <h3 class="text-xl font-semibold mb-2">納品済のブログシステムの移管</h3>
           <p>Excel自動化とコード解析により、月次作業の工数を 40% 削減。</p>
